add run | in workflow

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -19,6 +19,7 @@ jobs:
       with:
         python-version: 3.8
     - name: install
+      run: |
         pip3 -r requirement.txt
     - name: test
       run: |
