--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -20,7 +20,7 @@ jobs:
         python-version: 3.8
     - name: install
       run: |
-        pip3 -r requirement.txt
+        pip3 install -r requirements.txt
     - name: test
       run: |
         python3 -m unittest BinanceSymbolFetching/test/*test.py
