--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -20,6 +20,7 @@ jobs:
         python-version: 3.8
     - name: install
       run: |
+        python3 -m pip install --upgrade pip
         pip3 install -r requirements.txt
     - name: test
       run: |
