--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -20,9 +20,8 @@ jobs:
         python-version: 3.6
     - name: install
       run: |
-        apt-get update && upgrade
         python3 -m pip install --upgrade pip
-        pip3 install -r requirements.txt
+        pip install -r requirements.txt
     - name: test
       run: |
         python3 -m unittest BinanceSymbolFetching/test/*test.py
