--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,27 +1,26 @@
-name: Python Package using Conda
+name: Python Binance API Bot
 
 on:
+  release:
+    types: [created]
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  build-linux:
+  deploy:
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 5
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.6
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.6
-    - name: install
+    - name: install dependencies
       run: |
-        python3 -m pip3 install --upgrade pip
-        pip3 install -r requirements.txt
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - name: test
       run: |
         python3 -m unittest BinanceSymbolFetching/test/*test.py
