--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -23,4 +23,4 @@ jobs:
         pip install -r requirements.txt
     - name: test
       run: |
-        python3 -m unittest BinanceSymbolFetching/test/*test.py
+        cd BinanceSymbolFetching && python3 -m unittest test/*test.py
