update(gpg): testing verified signature

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -4,6 +4,8 @@ on:
   release:
     types: [created]
   push:
+    branches: [ test ]
+  push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
