--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Pillow==8.3.2
 pyparsing==2.4.7
 python-binance==1.0.15
 python-dateutil==2.8.2
+python-dotenv==0.19.1
 pytz==2021.3
 readchar==2.0.1
 regex==2021.10.8
