--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -4,11 +4,12 @@ on:
   release:
     types: [created]
   push:
-    branches: [ test ]
-  push:
-    branches: [ main ]
+    branches:
+      - main
+      - test
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   deploy:
