--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+
 # C extensions
 *.so
 
@@ -11,7 +12,7 @@ __pycache__/
 .env
 
 # SQLAlchemy
-
+SQLiteDB
 *stream.db
 
 # Distribution / packaging
