--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ importlib-metadata==4.8.1
 kiwisolver==1.3.1
 matplotlib==3.3.4
 multidict==5.2.0
+nginxparser_eb==0.0.7
 numpy==1.19.5
 pandas==1.1.5
 Pillow==8.3.2
