--- a/config_files/basic_config.conf
+++ b/config_files/basic_config.conf
@@ -1,3 +1,4 @@
+#DON'T MODIFY THOSE VARIABLE UNLESS YOUR ARE 100 SURE
 MAX_QUANTITY 100;
 MIN_QUANTITY 5;
 DEFAULT_INTERVAL 1d;
@@ -5,29 +6,21 @@ DEFAULT_LOOKBACK 180 day ago UTC;
 DEFAULT_INTERVAL_VALIDATE 6h;
 DEFAULT_LOOKBACK_VALIDATE 7 day ago UTC;
 
+#The part that you will modify if you want, you HAVE TO  specify the SYMBOL
+#QUANTITY is optionnal the default value will be MIN_QUANTITY defined above, buy I recommend to do it on your OWN
+#You can add as much symbol as you want ! you have to respect this syntax
+
 SYMBOL {
     SYMBOL ETHUSDT;
-    QUANTITY 33;
-    INTERVAL 1d;
-    LOOKBACK 180 day ago UTC;
-    INTERVAL_VALIDATE 6h;
-    LOOKBACK_VALIDATE 7 day ago UTC;
+    QUANTITY 30;
 }
 
 SYMBOL {
     SYMBOL XRPUSDT;
-    QUANTITY 33;
-    INTERVAL 1d;
-    LOOKBACK 180 day ago UTC;
-    INTERVAL_VALIDATE 6h;
-    LOOKBACK_VALIDATE 7 day ago UTC;
+    QUANTITY 20;
 }
 
 SYMBOL {
     SYMBOL BTCUSDT;
-    QUANTITY 34;
-    INTERVAL 1d;
-    LOOKBACK 180 day ago UTC;
-    INTERVAL_VALIDATE 6h;
-    LOOKBACK_VALIDATE 7 day ago UTC;
+    QUANTITY 50;
 }
